feat: update database ignore functionality to support new ignore mode for when user wants to ignore until new sets are available
