# backend/mediaserver/handle_temp_ignored_items.go
@@ -50,13 +50,25 @@ func HandleTempIgnoredItems(ctx context.Context) (Err logging.LogErrorInfo) {
 		}
 
 		// If the item has sets, we can remove it from the temp ignored items
-		if numOfSets > 0 {
+		if numOfSets > 0 && mediaItem.IgnoredMode == "until-set-available" {
 			dbErr = database.StopIgnoringMediaItem(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle)
 			if dbErr.Message != "" {
 				logging.LOGGER.Error().Timestamp().Str("tmdb_id", mediaItem.TMDB_ID).Str("library_title", mediaItem.LibraryTitle).Str("error", dbErr.Message).Msg("Failed to stop ignoring media item")
 				continue
 			}
+			logging.LOGGER.Info().Timestamp().Str("tmdb_id", mediaItem.TMDB_ID).Str("library_title", mediaItem.LibraryTitle).Msgf("Stopped ignoring media item %s because %d are now available", mediaItem.Title, numOfSets)
 			go sendNotification(mediaItem, numOfSets, mainImage)
+		} else if numOfSets > 0 && mediaItem.IgnoredMode == "until-new-set-available" {
+			// For "until-new-set-available" mode, we need to check if there are new sets available compared to the current sets when the item was ignored
+			if numOfSets > len(mediaItem.IgnoredSets) {
+				dbErr = database.StopIgnoringMediaItem(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle)
+				if dbErr.Message != "" {
+					logging.LOGGER.Error().Timestamp().Str("tmdb_id", mediaItem.TMDB_ID).Str("library_title", mediaItem.LibraryTitle).Str("error", dbErr.Message).Msg("Failed to stop ignoring media item")
+					continue
+				}
+				logging.LOGGER.Info().Timestamp().Str("tmdb_id", mediaItem.TMDB_ID).Str("library_title", mediaItem.LibraryTitle).Int("current_sets", len(mediaItem.IgnoredSets)).Int("new_sets", numOfSets).Msgf("New sets are available for media item %s, there are now %d sets available compared to %d sets when the item was ignored", mediaItem.Title, numOfSets, len(mediaItem.IgnoredSets))
+				go sendNotification(mediaItem, numOfSets, mainImage)
+			}
 		}
 	}
 
